style.css
* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
    
}

body {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: darkslateblue;
    height: 100vh;
}

.calculator {
    display:flex;
    flex-direction: column;
    align-items: center;
    margin: 0 auto;
    background-color: rgb(0, 0, 0);
    height: 600px;
    width: 350px;
    border: 4px solid darkgreen;
    border-radius: 5%;
    
}

.display {
    display:flex;
    justify-content: flex-end;
    align-items:end;
    width: 300px;
    height: 150px;
    background-color: rgb(77, 92, 76);
    margin: 16px 0 16px 0;
    padding: 0 8px;
    font-size: 3rem;
    font-weight: bold;
}

.calc-row {
    display:flex;
    justify-content: center;
    align-items: center;
}


.calc-row, .calc-keypad {
    gap: 16px;
}
.calc-keypad {
    display:flex;
    flex-direction: column;
    align-items: center;

}

.calc-btn {
    display: flex;
    justify-content: center;
    align-items: center;
    min-width: 64px;
    min-height: 64px;
    max-width: 70px;
    max-height: 70px;
    background-color: grey;
    border-color: white;
    border-radius: 50%;
    font-size: 1.3rem;
    font-weight: bold;
    color: white;
}

.calc-btn:hover {
    background-color: #c0bbbb;
}

.calc-btn:active {
    background-color: #aaa;
}

.undo-btn {
    background-color: darkred;
}

.op-btn {
    background-color: darkolivegreen;
}

